--- a/app/assets_webpack/src/stylesheets/merchants_portal/products.scss
+++ b/app/assets_webpack/src/stylesheets/merchants_portal/products.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the merchants_portal/products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+[data-bs-spy='scroll'] {
+  height: 100vh;
+}
