fix (UI): Fixed nav link default color from bootstrap default of blue to soko's default text color. This was done through app/assets_webpack/vendor/stylesheets/bootstrap/navs.scss .

--- a/app/views/merchants_portal/products/new.html.haml
+++ b/app/views/merchants_portal/products/new.html.haml
@@ -1,3 +1,44 @@
+.d-flex.flex-wrap
+  .me-auto.pe-3.my-2
+    %i.fa.fa-tag.font-size-21.me-2
+    .text-nowrap.d-inline-block.font-size-18.text-dark
+      %a.font-size-18.text-gray-6{:href => "javascript: void(0);"} Product  PROD-000001
+  .d-flex.flex-wrap.font-size-16
+    .me-3.my-2.text-nowrap
+      %button.btn.btn-primary.btn-with-addon
+        %span.btn-addon
+          %i.btn-addon-icon.far.fa-eye
+        Preview
+    .me-3.my-2.text-nowrap
+      %button.btn.btn-success.btn-with-addon
+        %span.btn-addon
+          %i.btn-addon-icon.far.fa-plus-square
+        Save
+
+
+.card-header.p-0.mb-4
+  .d-flex.align-items-stretch
+    %ul.nav.nav-tabs.nav-tabs-line.nav-tabs-line-bold.nav-tabs-noborder.nav-tabs-stretched
+      %li.nav-item
+        %a#tab-overview.nav-link.py-3{ "aria-selected" => "true", "data-bs-toggle" => "tab", :href => "#tab-overview-content" } 
+          Overview
+      %li.nav-item
+        %a#tab-common-information.nav-link.py-3.active{ "aria-selected" => "false", "data-bs-toggle" => "tab", :href => "#tab-common-information-content" }
+          Common Information
+      %li.nav-item
+        %a#tab-variants.nav-link.py-3{ "data-bs-toggle" => "tab", :href => "#tab-variants-content" }
+          Variants
+          %strong.ms-1 (4)
+      %li.nav-item
+        %a#tab-associations.nav-link.py-3{ "data-bs-toggle" => "tab", :href => "#tab-associations-content" } Associations
+      %li.nav-item
+        %a#tab-activity.nav-link.py-3{ "data-bs-toggle" => "tab", :href => "#tab-activity-content" } Activity
+
+
+
+
+
+
 .row.p-3
   -# scrollspy
   .col-sm-3
@@ -9,7 +50,7 @@
         %a.nav-link.text-gray-6.font-size-15{ href: "#inventory", data: { turbolinks: 'false' } } Inventory
         %a.nav-link.text-gray-6.font-size-15{ href: "#personalization", data: { turbolinks: 'false' } } Personalization
         %a.nav-link.text-gray-6.font-size-15{ href: "#search-optimization", data: { turbolinks: 'false' } } Search Optimization
-        
+
   -# spied element
   .col-sm-9{"data-bs-offset" => "50", "data-bs-spy" => "scroll", "data-bs-target" => "#variant-sections", :tabindex => "0"}
     .card.mb-4#basic-information
