--- a/app/views/layouts/merchants_portal/_menu_left.html.haml
+++ b/app/views/layouts/merchants_portal/_menu_left.html.haml
@@ -14,7 +14,7 @@
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link{ "data-bind": "click: toggleSubMenu" }
             %span.vb__menuLeft__item__title Sales Orders
-            %span.badge.bg-success.ms-2 4
+            %span.badge.badge-success.ms-2 4
             %i.vb__menuLeft__item__icon.fa.fa-cart-arrow-down
           %ul.vb__menuLeft__navigation
             %li.vb__menuLeft__item
@@ -66,7 +66,7 @@
         %li.vb__menuLeft__item
           %span.vb__menuLeft__item__link{ id: "purchase_orders" }
             %span.vb__menuLeft__item__title Purchase Orders
-            %span.badge.bg-success.ms-2 1
+            %span.badge.badge-success.ms-2 1
             %i.vb__menuLeft__item__icon.fa.fa-cart-plus
         %li.vb__menuLeft__item
           %span.vb__menuLeft__item__link{ id: "suppliers" }
