fix: Fixed expose-loader issues with webpacker by downgrading expose-loader. Fixed sortable bindingg for images of masterVariant.

--- a/app/assets_webpack/src/stylesheets/actiontext.scss
+++ b/app/assets_webpack/src/stylesheets/actiontext.scss
@@ -3,8 +3,6 @@
 // the trix-editor content (whether displayed or under editing). Feel free to incorporate this
 // inclusion directly in any other asset bundle and remove this file.
 //
-//= require trix/dist/trix
-
 // We need to override trix.css’s image gallery styles to accommodate the
 // <action-text-attachment> element we wrap around attachments. Otherwise,
 // images in galleries will be squished by the max-width: 33%; rule.
@@ -32,5 +30,34 @@
       padding: 0 !important;
       max-width: 100% !important;
     }
+  }
+}
+
+
+
+
+
+
+trix-toolbar {
+  padding: 10px 10px 0px 10px;
+  background: $white;
+  border-radius: 3px 3px 0 0;
+  border: 1px solid $border;
+}
+trix-editor {
+  padding: 5px 10px 5px 10px;
+  border-color: $border !important;
+  border-radius: 0 0 3px 3px;
+  border-top: 0px;
+  border-bottom: 1px solid $border;
+}
+trix-toolbar .trix-button {
+  background: $light;
+  border-color: $light;
+  color: $text !important;
+
+  &:hover {
+    background: darken($light, 6%);
+    border-color: darken($light, 6%);
   }
 }
