--- a/app/assets_webpack/src/stylesheets/global/base/mixins.scss
+++ b/app/assets_webpack/src/stylesheets/global/base/mixins.scss
@@ -1,6 +1,8 @@
+@use "sass:math";
+
 // Convert value of rem() sass mixin function
 @function rem($px, $base: $base-font-size) {
-  @return #{floor(($px/$base) * 100) / 100}rem; // to REMs
+  @return #{math.div(floor(math.div($px, $base) * 100), 100)}rem; // to REMs
   // @return #{$px}px; // to PX's
 }
 
