feat: Completed productForm view model (basic info, images, pricing, inventory, shipping, personalization, search)..

--- a/app/assets_webpack/src/stylesheets/global/base/core.scss
+++ b/app/assets_webpack/src/stylesheets/global/base/core.scss
@@ -80,6 +80,10 @@ svg {
   border-radius: 4px;
 }
 
+[contenteditable] {
+  outline: 0px solid transparent;
+}
+
 // dark theme
 [data-vb-theme='dark'] {
   body {
