--- a/app/assets_webpack/src/stylesheets/global/base/gallery.scss
+++ b/app/assets_webpack/src/stylesheets/global/base/gallery.scss
@@ -23,7 +23,7 @@
       border-radius: 5px;
       overflow: hidden;
       position: relative;
-      background-color: $gray-1;
+      background-color: $white;
       width: rem(184);
       height: rem(184);
       margin-bottom: rem(15);
